--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,19 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+
 html,
-.app,
-#root, 
-body{
-    height: 100%;
-    width: 100%;
-    font-family: "Inter", sans-serif;
+body,
+#root,
+.app {
+  height: 100%;
+  width: 100%;
+  font-family: "Inter", sans-serif;
 }
 
-::-webkit-scrollbar{
-    width: 10px;
+::-webkit-scrollbar {
+  width: 10px;
 }
-::-webkit-scrollbar-track{
-    background: #7a7f9d;
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #7a7f9d;
 }
-::-webkit-scrollbar-thumb{
-    background: #21295c;
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #21295c;
+}
+
+/* Handle on Hover */
+::-webkit-scrollbar-track:hover {
+  background: #21295c;
 }
